first assignment completed unlit portfolio

--- a/index.html
+++ b/index.html
@@ -18,7 +18,46 @@
 </head>
 
 <body>
-    <h1>Hello World</h1>
+    <section class="hero-area">
+        <div class="hero-col-1">
+            <h1 class="hero-h1f">hello i'm</h1>
+            <h1 class="hero-h1s">jwolt junaid</h1>
+            <p>A full stack allaround designer that placerat<br> in massa consectetur</p>
+            <a class="hero-btn" href="https://www.google.com" target="_blank">hire me</a>
+        </div>
+        <div class="hero-col-2">
+            <img class="hero-img" src="img/images/Group 33080.png" alt="" width="400px" height="400px">
+        </div>
+    </section>
+    <section class="about">
+        <div class="about-col-1">
+            <img class="hero-img" src="img/images/Group 33083.png" alt="" width="450px" height="500px">
+        </div>
+        <div class="about-col-2">
+            <h2 class="about-h2">about</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                book.
+            </p>
+            <a class="hero-btn" href="https://www.google.com" target="_blank">download resume</a>
+        </div>
+    </section>
+    <section class="portfilio">
+        <div class="portfolio-col">
+            <img src="img/images/image 4.png" alt="image4" width="250px" height="200px">
+            <h4>Power-x-gym (gym website)</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+        </div>
+        <div class="portfolio-col">
+            <img src="img/images/image 5.png" alt="image 5" width="250px" height="200px">
+            <h4>Creative Agency</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="portfolio-col">
+            <img src="img/images/image 8.png" alt="image8" width="250px" height="200px">
+            <h4>Hard Rock Music</h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+    </section>
 </body>
 
 </html>
