first complete version of the first assignment

--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
 </head>
 
 <body>
-    <section class="hero-area">
+    <section class="header">
+        <div class="main">
+            <ul>
+                <li><a href="#contact">contact</a></li>
+                <li><a href="#portfolio">portfolio</a></li>
+                <li><a href="#about">about</a></li>
+                <li><a href="#home">home</a></li>
+            </ul>
+        </div>
+    </section>
+    <section class="hero-area" id="home">
         <div class="hero-col-1">
             <h1 class="hero-h1f">hello i'm</h1>
             <h1 class="hero-h1s">jwolt junaid</h1>
@@ -29,7 +39,7 @@
             <img class="hero-img" src="img/images/Group 33080.png" alt="" width="400px" height="400px">
         </div>
     </section>
-    <section class="about">
+    <section class="about" id="about">
         <div class="about-col-1">
             <img class="hero-img" src="img/images/Group 33083.png" alt="" width="450px" height="500px">
         </div>
@@ -41,7 +51,11 @@
             <a class="hero-btn" href="https://www.google.com" target="_blank">download resume</a>
         </div>
     </section>
-    <section class="portfilio">
+    <section class="port-title">
+        <h1 class="portfolio-title">
+            <spam style="color: red;">LASTET</spam> WORKING PROJECT</h1>
+    </section>
+    <section class="portfilio" id="portfolio">
         <div class="portfolio-col">
             <img src="img/images/image 4.png" alt="image4" width="250px" height="200px">
             <h4>Power-x-gym (gym website)</h4>
@@ -58,6 +72,29 @@
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
         </div>
     </section>
+    <section class="inquery">
+        <div class="inquery-col">
+            <h1>Work Inquiry</h1>
+        </div>
+        <div class="inquery-col">
+            <a class="inquery-btn" href="https://www.google.com" target="_blank">let's chat</a>
+        </div>
+    </section>
+    <footer id="contact">
+        <h4>Stay connected</h4>
+        <h2> <a href="mailto:junaid65859@gmail.com">jwolt@design.com</a> </h2>
+        <div class="footer-icon">
+            <div class="icon-col">
+                <a href="#"><img src="img/icons/Group 33059.png" alt="icon-1" width="50px"></a>
+            </div>
+            <div class="icon-col">
+                <a href="#"><img src="img/icons/image 6.png" alt="icon-2" width="50px"></a>
+            </div>
+            <div class="icon-col">
+                <a href="#"><img src="img/icons/image 7.png" alt="icon-3" width="50px"></a>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
